--- a/modules/authentication/views/login.html
+++ b/modules/authentication/views/login.html
@@ -1,17 +1,17 @@
-<div>By default password
+<div class="defaultPasswordCls">Default Password
 <p>Username:<span>test</span></p>
 <p>Password:<span>test</span></p>
 </div>
-
+<br />
 <div>
 <div ng-show="error" class="alert alert-danger" >{{error}}</div>
 <form name="loginForm" ng-submit="login()">
-    <div>
-        <label>Username</label>
+    <div class="textBoxClass">
+        <label>Username:</label>
         <input type="text" ng-model='username' id= "username" required />
     </div>
-    <div>
-        <label>Password</label>
+    <div class="textBoxClass">
+        <label>Password:</label>
         <input type="password" id="password" ng-model="password" required />
     </div>
     <div>
